@@ -95,6 +95,7 @@
 #define __ffrsim(A, B, C, D, E) ffrsim(A, B, C, D, E)
 #define __ffsrow(A, B, C, D) ffsrow(A, B, C, D)
 #define __ffthdu(A, B, C) ffthdu(A, B, C)
+#define __fftscl(A, B, C, D, E) fftscl(A, B, C, D, E)
 #define __ffuky(A, B, C, D, E, F) ffuky(A, B, C, D, E, F)
 #define __ffukye(A, B, C, D, E, F) ffukye(A, B, C, D, E, F)
 #define __ffukyd(A, B, C, D, E, F) ffukyd(A, B, C, D, E, F)
@@ -174,6 +175,7 @@ typedef fitsfile __fitsfile;
 #define __ffrsim(A, B, C, D, E) __dummy()
 #define __ffsrow(A, B, C, D) __dummy()
 #define __ffthdu(A, B, C) __dummy()
+#define __fftscl(A, B, C, D, E) __dummy()
 #define __ffuky(A, B, C, D, E, F) __dummy()
 #define __ffukye(A, B, C, D, E, F) __dummy()
 #define __ffukyd(A, B, C, D, E, F) __dummy()
