@@ -1,8 +1,9 @@
-2017-09-02
+2017-09-04
 
         * Version 1.5.0 released
         =========================
 
+        Add GFitsTableCol::scale() method (#2191)
         Implement COMPTEL response computation (#2186)
         Add COMPTEL SDA, SDB and ICT response files (#2186)
         Add GModelSpectralNodes spectral model constructor (#2178)
